# ChangeLog for www-client/seamonkey
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/seamonkey/ChangeLog,v 1.146 2008/07/05 15:14:52 ranger Exp $

  05 Jul 2008; Brent Baude <ranger@gentoo.org> seamonkey-1.1.10.ebuild:
  Marking seamonkey-1.1.10 ppc64 and ppc for bug 230567

  04 Jul 2008; Markus Meier <maekke@gentoo.org> seamonkey-1.1.10.ebuild:
  amd64 stable, bug #230567

  04 Jul 2008; Raúl Porcel <armin76@gentoo.org> seamonkey-1.1.10.ebuild:
  alpha/ia64/sparc stable wrt security #230567

  04 Jul 2008; Jeroen Roovers <jer@gentoo.org> seamonkey-1.1.10.ebuild:
  Stable for HPPA (bug #230567).

  04 Jul 2008; Christian Faulhammer <opfer@gentoo.org>
  seamonkey-1.1.10.ebuild:
  stable x86, security bug 230567

*seamonkey-1.1.10 (02 Jul 2008)

  02 Jul 2008; Raúl Porcel <armin76@gentoo.org> +seamonkey-1.1.10.ebuild:
  Version bump

  21 May 2008; Raúl Porcel <armin76@gentoo.org> -seamonkey-1.1.9.ebuild:
  old

  20 May 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  seamonkey-1.1.9-r1.ebuild:
  ppc stable, bug #218065

  19 May 2008; Tiziano Müller <dev-zero@gentoo.org> seamonkey-1.1.7.ebuild,
  seamonkey-1.1.9.ebuild, seamonkey-1.1.9-r1.ebuild:
  Changed dependency for postgresql to virtual/postgresql-server

  18 May 2008; Jeroen Roovers <jer@gentoo.org> seamonkey-1.1.9-r1.ebuild:
  Stable for HPPA (bug #218065).

  18 May 2008; Robert Buchholz <rbu@gentoo.org> seamonkey-1.1.9-r1.ebuild:
  amd64 stable (bug #218065)

  18 May 2008; Markus Rothe <corsair@gentoo.org> seamonkey-1.1.9-r1.ebuild:
  Stable on ppc64; bug #218065

  18 May 2008; Christian Faulhammer <opfer@gentoo.org>
  seamonkey-1.1.9-r1.ebuild:
  stable x86, security bug 218065

  17 May 2008; Raúl Porcel <armin76@gentoo.org> seamonkey-1.1.9-r1.ebuild:
  alpha/ia64/sparc stable wrt security #218065

*seamonkey-1.1.9-r1 (17 May 2008)

  17 May 2008; Raúl Porcel <armin76@gentoo.org> +seamonkey-1.1.9-r1.ebuild: