@@ -1,6 +1,11 @@
 # ChangeLog for www-client/seamonkey
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/seamonkey/ChangeLog,v 1.146 2008/07/05 15:14:52 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/seamonkey/ChangeLog,v 1.147 2008/07/16 13:58:59 armin76 Exp $
+
+*seamonkey-1.1.11 (16 Jul 2008)
+
+  16 Jul 2008; Raúl Porcel <armin76@gentoo.org> +seamonkey-1.1.11.ebuild:
+  Version bump
 
   05 Jul 2008; Brent Baude <ranger@gentoo.org> seamonkey-1.1.10.ebuild:
   Marking seamonkey-1.1.10 ppc64 and ppc for bug 230567
